add code from Emily Bache's Tennis Refactoring Kata

--- a/test/Tests/Tests.csproj
+++ b/test/Tests/Tests.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Production\Production.csproj" />
+      <ProjectReference Include="..\..\src\Tennis\Tennis.csproj" />
     </ItemGroup>
 
 
